--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Supergirl Alita</title>
+    <title>Alita</title>
+    <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="/styles/main.css" type="text/css"/>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
+  <nav>
+    <div class="nav-wrapper" style="background: #e9d60a; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; height: 10rem; ">
+      <a href="#" class="brand-logo black-text" style="margin:2.2rem 2rem;"><i class="material-icons" style="font-size:5rem;">router</i></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+    </div>
+  </nav>
+  <div class="typewriter">
+    <h1>Chat with Alita</h1>
+  </div>
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
     <script>
