--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -9,18 +9,17 @@
   <link rel="stylesheet" href="/styles/main.css" type="text/css"/>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 <body>
   <nav>
     <div class="nav-wrapper" style="background: #e9d60a; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; height: 10rem; ">
-      <a href="#" class="brand-logo black-text" style="margin:2.2rem 2rem;"><i class="material-icons" style="font-size:5rem;">router</i></a>
+      <a href="#" class="brand-logo black-text" style="margin:2.2rem 1rem;"><i class='fas fa-robot' style='font-size:45px'></i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
     </div>
   </nav>
-  <div class="typewriter">
-    <h1>Chat with Alita</h1>
+  <div style="color: #e9d60a; margin: 20rem 0 0 0;" class="center">
+    <h1>Order Pizza over a Bot</h1>
   </div>
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
