--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -23,7 +23,7 @@
   </div>
   <div  class="center">
     <div style="color: red;">Note:</div>
-    <div style="color: #e90a0a; margin: 1rem 0 0 0;">Due to COVID-19, facebook has temporarily paused individual verification. so, This chatbot hasn't been approved by facebook yet.so, public cannot use this wonderful bot. As of now Alita interacts only with the Admin. Make sure you checkout the Admin credentials(ph.no, password) to login and interact with Alita which I enclosed in readme/docs.</div>
+    <div style="color: #e90a0a; margin: 1rem 0 0 0;" class="center">Due to COVID-19, facebook has temporarily paused individual verification. so, This chatbot hasn't been approved by facebook yet.so, public cannot use this wonderful bot. As of now Alita interacts only with the Admin. Make sure you checkout the Admin credentials(ph.no, password) to login and interact with Alita which I enclosed in readme/docs.</div>
   </div>
   
 
