updated bot response

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -14,18 +14,13 @@
 <body>
   <nav>
     <div class="nav-wrapper" style="background: #e9d60a; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; height: 10rem; ">
-      <a href="#" class="brand-logo black-text" style="margin:2.2rem 1rem;"><i class='fas fa-robot' style='font-size:45px'></i></a>
+      <a href="#" class="brand-logo" style="margin:2.2rem 1rem;color: rgb(53, 59, 63);"><i class='fas fa-robot' style='font-size:45px'></i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
     </div>
   </nav>
   <div style="color: #e9d60a; margin: 20rem 0 0 0;" class="center">
     <h1>Order Pizza over a Bot</h1>
   </div>
-  <div  class="center">
-    <div style="color: red;">Note:</div>
-    <div style="color: #e90a0a; margin: 1rem 0 0 0;" class="center">Due to COVID-19, facebook has temporarily paused individual verification. <br/>so, This chatbot hasn't been approved by facebook yet.<br/>so, public cannot use this wonderful bot. <br/>As of now Alita interacts only with the Admin.<br/> so, use ph.no: "8778249687" password: "quackquack" to login and interact.</div>
-  </div>
-  
 
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
