updated like buttons

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -48,5 +48,11 @@ theme_color="#ffc300"
 logged_in_greeting="Hi! How can i help you?"
 logged_out_greeting="Hi! How can i help you?">
     </div>
+    <div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 </body>
 </html>
