updated like buttons

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -49,7 +49,8 @@ logged_in_greeting="Hi! How can i help you?"
 logged_out_greeting="Hi! How can i help you?">
     </div>
     <div
-  class="fb-like"
+  theme_color="#ffc300"
+  class="fb-like center"
   data-share="true"
   data-width="450"
   data-show-faces="true">
