updated like buttons

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -20,6 +20,13 @@
   </nav>
   <div style="color: #e9d60a; margin: 20rem 0 0 0;" class="center">
     <h1>Order Pizza over a Bot</h1>
+    <div
+    theme_color="#ffc300"
+    class="fb-like"
+    data-share="true"
+    data-width="450"
+    data-show-faces="true">
+    </div>
   </div>
 
     <!-- Load Facebook SDK for JavaScript -->
@@ -48,12 +55,5 @@ theme_color="#ffc300"
 logged_in_greeting="Hi! How can i help you?"
 logged_out_greeting="Hi! How can i help you?">
     </div>
-    <div
-  theme_color="#ffc300"
-  class="fb-like center"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
 </body>
 </html>
