updated like buttons

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -21,7 +21,7 @@
   <div style="color: #e9d60a; margin: 20rem 0 0 0;" class="center">
     <h1>Order Pizza over a Bot</h1>
     <div
-    theme_color="#ffc300"
+    style="color:#e9d60a;"
     class="fb-like"
     data-share="true"
     data-width="450"
