updated like buttons

--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -51,7 +51,7 @@
     <div class="fb-customerchat"
       attribution=setup_tool
       page_id="104117128151163"
-theme_color="#ffc300"
+theme_color="#42A7EA"
 logged_in_greeting="Hi! How can i help you?"
 logged_out_greeting="Hi! How can i help you?">
     </div>
