--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -10,7 +10,6 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-
 </head>
 <body>
   <nav>
@@ -22,30 +21,16 @@
   <div style="color: #e9d60a; margin: 20rem 0 0 0;" class="center">
     <h1>Order Pizza over a Bot</h1>
     <div
-    style="color:#e9d60a;"
-    class="fb-like"
-    data-share="true"
-    data-width="450"
-    data-show-faces="true">
-
-    </div>
+  theme_color="#ffc300"
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true"></div>
   </div>
 
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
     <script>
-              FB.login(function(response) {
-            if (response.authResponse) {
-            console.log('Welcome!  Fetching your information.... ');
-            FB.api('/me', function(response) {
-              console.log('Good to see you, ' + response.name + '.');
-            });
-            } else {
-            console.log('User cancelled login or did not fully authorize.');
-            }
-        });
-        
-
       window.fbAsyncInit = function() {
         FB.init({
           xfbml            : true,
@@ -65,9 +50,9 @@
     <div class="fb-customerchat"
       attribution=setup_tool
       page_id="104117128151163"
-      theme_color="#42A7EA"
-      logged_in_greeting="Hi! How can i help you?"
-      logged_out_greeting="Hi! How can i help you?">
+theme_color="#ffc300"
+logged_in_greeting="Hi! How can i help you?"
+logged_out_greeting="Hi! How can i help you?">
     </div>
 </body>
 </html>
