--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -13,19 +13,13 @@
 </head>
 <body>
   <nav>
-    <div class="nav-wrapper" style="background: #e9d60a; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; height: 10rem; ">
+    <div class="nav-wrapper" style="background: #FFFB01; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; height: 10rem; ">
       <a href="#" class="brand-logo" style="margin:2.2rem 1rem;color: rgb(53, 59, 63);"><i class='fas fa-robot' style='font-size:45px'></i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
     </div>
   </nav>
-  <div style="color: #e9d60a; margin: 20rem 0 0 0;" class="center">
+  <div style="color: #FFFB01; margin: 20rem 0 0 0;" class="center">
     <h1>Order Pizza over a Bot</h1>
-    <div
-  theme_color="#ffc300"
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true"></div>
   </div>
 
     <!-- Load Facebook SDK for JavaScript -->
